# sfc

./: AUTHORS  COPYING  ChangeLog  README.rst  VERSION  patch_horizon.py  requirements.txt  setup.cfg
etc/crd/modules/: sfc.conf
etc/nscsas/consumer_modules/: sfc.conf
etc/nscsas/modules/: sfc.conf
sfc/crdclient/v2_0/: client.py
sfc/crdconsumer/: exceptions.py  plugin.py
sfc/crdconsumer/client/: ocas_client.py  shell.py
sfc/crdserver/: delta.py
sfc/crdserver/agents/: crd-relay-agent  crd_relay_agent.py  remote_control.py
sfc/crdserver/common/: constants.py  exceptions.py
sfc/crdserver/db/: delta.py  sfc_db.py
sfc/crdserver/dispatcher/ofcontroller/: sfc.py
sfc/crdserver/drivers/: fsl_driver.py
sfc/crdserver/extensions/: sfcext.py
sfc/crdserver/listener/: sfc.py
sfc/crdserver/plugins/: delta.py  sfc_plugin.py
sfc/crdservice/: delta.py
sfc/crdservice/agents/: crd-relay-agent  crd_relay_agent.py  remote_control.py
sfc/crdservice/common/: exceptions.py
sfc/crdservice/db/: delta.py  sfc_db.py
sfc/crdservice/drivers/: fsl_driver.py
sfc/crdservice/extensions/: sfcext.py
sfc/crdservice/listener/: sfc.py
sfc/crdservice/plugins/: delta.py  sfc_plugin.py
sfc/nscsas/resources/: chains.py  chainsets.py  db.py  model.py  services.py
sfc/openstack_dashboard/api/: sfc.py
sfc/proxy/: service.py  utils.py  version.py
sfc/proxy/api/: __init__.py  app.py  config.py  constants.py  expose.py  hooks.py  middleware.py  utils.py
sfc/proxy/client/: client.py  proxy_client.py
sfc/proxy/common/: config.py  exceptions.py  i18n.py
(+205 files in other folders)
