[metadata]
name = sfc
version = 2014
summary = Service Functional Chaining RESTful Application services
description-file =
    README.rst
author = Freescale
author-email = b37207@freescale.com
home-page = http://www.freescale.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    sfc

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sfc/locale/sfc.pot

[compile_catalog]
directory = sfc/locale
domain = sfc

[update_catalog]
domain = sfc
output_dir = sfc/locale
input_file = sfc/locale/sfc.pot
